--- a/Frontend - Organi/assets/css/pages/forgot-password/forgot-password.css
+++ b/Frontend - Organi/assets/css/pages/forgot-password/forgot-password.css
@@ -507,12 +507,12 @@
     transition: width 0.3s;
 }
 
-#header .down-side .menu ul li a:hover+.horizontal-line {
-    width: 100%;
+#header .down-side .menu ul a:hover {
+    color: green;
 }
 
-#header .down-side .menu ul a:hover {
-    color: green
+#header .down-side .menu ul a:hover + .horizontal-line {
+    width: 100%;
 }
 
 #header .down-side .drop-down {
@@ -527,8 +527,8 @@
     position: relative;
     z-index: 1;
     height: 0;
-    transition: height 0.5s;
-    background-color: white;
+    transition: height 0.3s ease-in-out;
+    background: white;
     width: 215px;
 }
 
@@ -576,7 +576,7 @@
 }
 
 #header .down-side .drop-down-menu li:hover {
-    background-image: linear-gradient(45deg, #cfcfcf, #ffffff);
+    background-image: linear-gradient(45deg, #d3d3d3, #dbdada);
 }
 
 #header .down-side .info {
@@ -649,30 +649,122 @@
     text-align: center;
 }
 
+#forgot-password{
+    margin: 75px 0;
+}
 
+#forgot-password .forgot-password{
+    border: 1px solid #707070e8;
+    width: 53%;
+    padding: 25px 10%;
+    margin: 0 auto;
+    border-radius: 25px;
+    padding: 60px 75px;
+    background: #e9e9e9;
+}
 
+#forgot-password .forgot-password .forgot-password-image{
+    width: 180px;
+    height: 70px;
+    margin: 0 auto;
+}
 
+#forgot-password .forgot-password .forgot-password-image img{
+    width: 100%;
+    height: 100%;
+    transition: all 0.4s;
+}
 
+#forgot-password .forgot-password .forgot-password-image img:hover{
+    cursor: pointer;
+    transform: scale(1.2);
+}
 
+#forgot-password .forgot-password .forgot-password-lock{
+    text-align: center;
+    margin-top: 40px;
+}
 
+#forgot-password .forgot-password .forgot-password-lock svg{
+    font-size: 60px;
+    color: green;
+}
 
+#forgot-password .forgot-password .forgot-password-lock svg:hover{
+   cursor: pointer;
+   color: #1ac120;
+}
 
+#forgot-password .forgot-password .forgot-password-lock h2{
+    color: #383838;
+    font-size: 40px;
+}
 
+#forgot-password .forgot-password .forgot-password-content{
+    text-align: center;
+}
 
+#forgot-password .forgot-password .forgot-password-content .input-icon{
+    position: relative;
+    border-radius: 10px;
+}
 
+#forgot-password .forgot-password .forgot-password-content .input-icon svg{
+    position: absolute;
+    left: 0;
+    border: 1px solid gray;
+    color: #9f9f9f;
+    background: #e7e7e7;
+    border-top-left-radius: inherit;
+    border-bottom-left-radius: inherit;
+    padding: 14px 15px;
+}
 
+#forgot-password .forgot-password .forgot-password-content .input-icon svg:hover{
+   cursor: pointer;
+}
 
+#forgot-password .forgot-password .forgot-password-content input{
+    margin-top: 35px;
+    height: 46px;
+    border-radius: 10px;
+    border: 1px solid #838383;
+    background: #f9f9f9;
+    color: #7c7c7c;
+    letter-spacing: 1px;
+    box-shadow: none;
+    padding-left: 60px;
+    font-size: 17px;
+}
 
+#forgot-password .forgot-password .forgot-password-content input::placeholder{
+    color: gray;
+    letter-spacing: 1px;
+    font-style: italic;
+    font-size: 16px;
+}
 
+#forgot-password .forgot-password .forgot-password-content input:focus{
+    box-shadow: rgba(0, 0, 0, 0.40) 0px 2px 15px;
+}
 
+#forgot-password .forgot-password .forgot-password-content button{
+    width: 40%;
+    border: none;
+    background: #247c24;
+    font-family: serif;
+    font-size: 20px;
+    margin-top: 45px;
+}
 
+#forgot-password .forgot-password .forgot-password-content button:hover{
+    background-color: #16ad1c;
+}
 
 #footer .bg-image {
-    background-image: url(../../../images/backgrounds/background4.png);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 595px;
 }
 
 #footer .upper-side {
@@ -689,7 +781,6 @@
     border-right: 1px solid #403f3f;
     padding-right: 30px;
 }
-
 
 #footer .upper-side .left-side {
     width: 23%;
@@ -837,7 +928,7 @@
 #footer .down-side {
     display: flex;
     justify-content: space-around;
-    margin-top: 23px;
+    margin-top: 15px;
 }
 
 #footer .down-side .right-side ul {
