--- a/Frontend - Organi/assets/css/pages/home/home.css
+++ b/Frontend - Organi/assets/css/pages/home/home.css
@@ -474,7 +474,7 @@
 
 #header .down-side .menu {
    position: relative;
-   animation: text 0.5s;
+   animation: text 0.4s;
    margin-top: 10px;
 }
 
@@ -507,12 +507,12 @@
    transition: width 0.3s;
 }
 
-#header .down-side .menu ul li a:hover+.horizontal-line {
-   width: 100%;
+#header .down-side .menu ul a:hover {
+   color: green;
 }
 
-#header .down-side .menu ul a:hover {
-   color: green
+#header .down-side .menu ul a:hover + .horizontal-line {
+   width: 100%;
 }
 
 #header .down-side .drop-down {
@@ -527,7 +527,7 @@
    position: relative;
    z-index: 1;
    height: 0;
-   transition: height 0.5s;
+   transition: height 0.3s ease-in-out;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
    width: 215px;
 }
@@ -576,7 +576,7 @@
 }
 
 #header .down-side .drop-down-menu li:hover {
-   background-image: linear-gradient(45deg, #cfcfcf, #ffffff);
+   background-image: linear-gradient(45deg, #d3d3d3, #dbdada);
 }
 
 #header .down-side .info {
@@ -1591,7 +1591,7 @@
    height: 600px;
    border-radius: 60px;
    text-align: center;
-   padding-top: 10%;
+   padding-top: 9%;
    margin: 5px auto;
    background-image: linear-gradient(to bottom, #409350, #ffffff, #277627);
 }
@@ -1617,7 +1617,7 @@
 
 #feedback .slider .bg-color .feedback-description {
    width: 75%;
-   margin: 60px auto;
+   margin: 50px auto;
 }
 
 #feedback .slider .bg-color .feedback-image img {
@@ -1639,10 +1639,9 @@
 }
 
 #feedback .slider .bg-color .feedback-description p {
-   font-size: 25px;
-   font-family: myFourthFont;
+   font-size: 28px;
+   font-family: serif;
    color: black;
-   font-weight: bolder;
 }
 
 #feedback .slider .btn {
@@ -1756,7 +1755,6 @@
    font-weight: 600;
 }
 
-
 #blog .blog .blog-content .blog-author-date svg {
    margin-right: 10px;
 }
@@ -1789,7 +1787,6 @@
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
-   height: 595px;
 }
 
 #footer .upper-side {
@@ -1954,7 +1951,7 @@
 #footer .down-side {
    display: flex;
    justify-content: space-around;
-   margin-top: 23px;
+   margin-top: 15px;
 }
 
 #footer .down-side .right-side ul {
@@ -1983,8 +1980,8 @@
    height: 70px;
    background-color: black;
    position: fixed;
-   right: 50px;
-   bottom: 90px;
+   right: 70px;
+   bottom: 35px;
    z-index: 123;
    border-radius: 50%;
    cursor: pointer;
