--- a/Frontend - Organi/assets/css/pages/profile/profile.css
+++ b/Frontend - Organi/assets/css/pages/profile/profile.css
@@ -507,12 +507,12 @@
     transition: width 0.3s;
 }
 
-#header .down-side .menu ul li a:hover+.horizontal-line {
-    width: 100%;
+#header .down-side .menu ul a:hover {
+    color: green;
 }
 
-#header .down-side .menu ul a:hover {
-    color: green
+#header .down-side .menu ul a:hover + .horizontal-line {
+    width: 100%;
 }
 
 #header .down-side .drop-down {
@@ -527,8 +527,8 @@
     position: relative;
     z-index: 1;
     height: 0;
-    transition: height 0.5s;
-    background-color: white;
+    transition: height 0.3s ease-in-out;
+    background: white;
     width: 215px;
 }
 
@@ -576,7 +576,7 @@
 }
 
 #header .down-side .drop-down-menu li:hover {
-    background-image: linear-gradient(45deg, #cfcfcf, #ffffff);
+    background-image: linear-gradient(45deg, #d3d3d3, #dbdada);
 }
 
 #header .down-side .info {
@@ -629,6 +629,7 @@
     height: 100%;
     margin-top: 15px;
 }
+
 #banner .banner {
     background-repeat: no-repeat;
     background-size: cover;
@@ -758,37 +759,10 @@
     background-color: #27c727;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 #footer .bg-image {
-    background-image: url(../../../images/backgrounds/background4.png);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 595px;
 }
 
 #footer .upper-side {
@@ -805,7 +779,6 @@
     border-right: 1px solid #403f3f;
     padding-right: 30px;
 }
-
 
 #footer .upper-side .left-side {
     width: 23%;
@@ -953,7 +926,7 @@
 #footer .down-side {
     display: flex;
     justify-content: space-around;
-    margin-top: 23px;
+    margin-top: 15px;
 }
 
 #footer .down-side .right-side ul {
@@ -983,7 +956,7 @@
     background-color: black;
     position: fixed;
     right: 70px;
-    bottom: 90px;
+    bottom: 35px;
     z-index: 123;
     border-radius: 50%;
     cursor: pointer;
