--- a/Frontend - Organi/assets/css/pages/verify-email/verify-email.css
+++ b/Frontend - Organi/assets/css/pages/verify-email/verify-email.css
@@ -528,7 +528,7 @@
     z-index: 1;
     height: 0;
     transition: height 0.3s ease-in-out;
-    background: white;
+    background: #f1f1f1;
     width: 215px;
 }
 
@@ -634,15 +634,14 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 340px;
+    height: 375px;
     filter: brightness(0.9);
-}
-
-#banner .banner h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 220px;
+}
+
+#banner .banner h1 {
     font-size: 60px;
     font-weight: 500;
     font-style: italic;
@@ -650,385 +649,20 @@
     text-align: center;
 }
 
-#product-detail .main-image {
-    width: 450px;
-    height: 450px;
-    border-radius: 60px;
-    padding-left: 35px;
-    padding-top: 35px;
-    filter: brightness(0.9);
+#verify-email{
+    margin: 60px 0;
 }
 
-#product-detail .main-image:hover {
-    filter: brightness(1);
-}
-
-#product-detail .main-image img {
-    width: 90%;
-    height: 90%;
-    transition: all 0.4s;
-}
-
-#product-detail .main-image img:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-}
-
-#product-detail .detail-images {
-    width: 450px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    border-radius: 30px;
-    padding: 20px 10px;
-}
-
-#product-detail .detail-images img {
-    width: 30%;
-    height: 30%;
-    margin-left: 40px;
-    border-radius: 30px;
-    padding: 5px 10px;
-    background-image: linear-gradient(to bottom, #46b946, #f4fff4, #48c548);
-    transition: all 0.4s;
-    filter: brightness(0.9);
-}
-
-#product-detail .detail-images img:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-    filter: brightness(1);
-}
-
-#product-detail .product .product-category-name span {
-    font-size: 50px;
-    font-weight: 500;
-    color: green;
-}
-
-#product-detail .product .product-name span {
-    font-size: 30px;
-    font-weight: 500;
-    color: #27db27;
-}
-
-#product-detail .product .product-price {
-    font-size: 20px;
-    font-style: italic;
-    font-weight: 500;
-}
-
-#product-detail .product .product-price span:nth-child(1) {
-    text-decoration: 1px line-through red;
-    color: red;
-}
-
-#product-detail .product .product-price span:nth-child(2) {
-    margin-left: 15px;
-    color: green;
-}
-
-#product-detail .product .product-rating-review {
-    display: flex;
-    gap: 15px;
-    margin-top: 5px;
-}
-
-#product-detail .product .product-rating-review .product-rating svg {
-    color: #c5c2c2;
-    font-size: 15px;
-}
-
-#product-detail .product .product-rating-review .product-rating .active {
-    color: green
-}
-
-#product-detail .product .product-rating-review .product-review span {
-    font-size: 17px;
-    font-style: italic;
-    position: relative;
-    bottom: 2px;
-}
-
-#product-detail .product .product-code-stock {
-    display: flex;
-    margin-top: 25px;
-    gap: 50px;
-    font-weight: 500;
-}
-
-#product-detail .product .product-code-stock h2 {
-    font-size: 23px;
-}
-
-#product-detail .product .product-code-stock span {
-    font-size: 17px;
-    color: green;
-    font-style: italic;
-}
-
-#product-detail .product .product-description {
-    margin-top: 30px;
-}
-
-#product-detail .product .product-description p {
-    font-size: 20px;
-    color: #262525;
-    font-family: cursive;
-}
-
-#product-detail .product .product-btns {
-    display: flex;
-    gap: 30px;
-    margin-top: 30px;
-}
-
-#product-detail .product .product-btns .product-add a {
-    border-radius: 30px;
-    padding: 10px 35px;
-    color: white;
-    font-weight: 500;
-}
-
-#product-detail .product .product-btns .product-add-to-cart a:hover {
-    background-color: green;
-}
-
-
-#product-detail .product .product-btns .product-add-to-wishlist a:hover {
-    background-color: orange;
-}
-
-#product-detail .product .product-social-medias {
-    margin-top: 30px;
-}
-
-#product-detail .product .product-social-medias .social-media-title span {
-    font-size: 25px;
-    font-weight: bolder;
-}
-
-#product-detail .product .product-social-medias .social-media-icons {
-    display: flex;
-    gap: 30px;
-    margin-top: 5%;
-}
-
-#product-detail .product .product-social-medias .social-media-icons a {
-    background: #dfdfdf;
-    padding: 15px 20px;
-    border-radius: 30px;
-    transition: all 1s;
-}
-
-#product-detail .product .product-social-medias .social-media-icons a:hover {
-    background: black;
-}
-
-#product-detail .product .product-social-medias .social-media-icons a:hover svg {
-    color: white;
-}
-
-
-#product-detail .product .product-social-medias .social-media-icons a svg {
-    width: 15px;
-    height: 15px;
-    animation: none;
-    color: black;
-}
-
-#description {
-    margin-top: 30px
-}
-
-#description h2 {
-    font-weight: 700;
-    font-size: 40px;
-    margin-bottom: 25px;
-}
-
-#description p {
-    font-size: 17px;
-    color: #363636;
-    line-height: 35px;
-    font-family: myFirstFont;
-}
-
-#review h3 {
-    font-size: 30px;
-}
-
-#review .review-content {
-    display: flex;
-    gap: 25px;
-    margin-top: 40px;
-    border-bottom: 1px solid #279935;
-    padding-bottom: 40px;
-}
-
-#review .review-content .review-user-image {
-    width: 12%;
-    height: 12%;
-    border-radius: 50%;
-}
-
-#review .review-content .review-user-image img {
-    width: 100%;
-    height: 100%;
-    border-radius: inherit;
-}
-
-#review .review-content .review-user-description {
-    width: 100%;
-}
-
-#review .review-content .review-user-description .user-fullname-rating {
-    display: flex;
-    justify-content: space-between;
-}
-
-#review .review-content .review-user-description .user-fullname-rating .user-fullname span {
-    font-size: 20px;
-    font-weight: 700;
-}
-
-#review .review-content .review-user-description .user-fullname-rating .user-rating:hover {
-    cursor: pointer;
-}
-
-#review .review-content .review-user-description .user-fullname-rating .user-rating svg {
-    color: #c5c2c2;
-}
-
-#review .review-content .review-user-description .user-fullname-rating .user-rating .active {
-    color: green;
-}
-
-#review .review-content .review-user-description .user-description p {
-    font-size: 17px;
-    color: #222222;
-    font-style: italic;
-    margin-top: 15px;
-}
-
-#review .review-content .review-user-description .user-description span {
-    font-size: 17px;
-    font-weight: 500;
-}
-
-#add-review h2 {
-    font-weight: 700;
-    color: #363636;
-}
-
-#add-review .rating {
-    display: flex;
-    gap: 30px;
-}
-
-#add-review .rating .rating-title {
-    font-size: 20px;
-    color: #7d8978;
-}
-
-#add-review .rating .rating-icon {
-    margin-top: 3px;
-    cursor: pointer;
-}
-
-#add-review .rating .rating-icon svg {
-    color: #c5c2c2;
-    font-size: 15px;
-}
-
-#add-review .rating .rating-icon .active {
-    color: green;
-}
-
-#add-review .comment {
-    position: relative;
-}
-
-#add-review form {
-    display: inline-block;
-}
-
-#add-review .comment svg {
-    position: absolute;
-    left: 20px;
-    top: 16px;
-    font-size: 13px;
-    color: gray;
-}
-
-#add-review .comment textarea {
-    outline: none;
+#verify-email .alert{
     border-radius: 20px;
-    padding-left: 42px;
-    font-style: italic;
-    border-color: #cbc8c8;
-    color: #2a2a2a;
-    padding-top: 10px;
-    resize: none;
-    background: #f9f9f9;
-    letter-spacing: 1px;
+    background-color: #e6ffea;
+    border: 1px solid #b0d5b6;
 }
 
-#add-review .comment textarea::placeholder {
-    color: rgb(104, 104, 104);
-}
-
-#add-review .comment textarea:focus {
-    border-color: #35a935;
-}
-
-#add-review .comment input {
-    box-shadow: none;
-    border-radius: 20px;
-    font-style: italic;
-    border-color: #cbc8c8;
-    color: #2a2a2a;
-    padding-left: 40px;
-    font-size: 14px;
-    width: 390px;
-    background: #f9f9f9;
-    height: 45px;
-    letter-spacing: 1px;
-}
-
-#add-review .comment input:focus {
-    border-color: #35a935;
-}
-
-#add-review .comment input::placeholder {
-    color: rgb(104, 104, 104);
-}
-
-#add-review .comment-description svg {
-    top: 19px;
-}
-
-#add-review .comment-name-email {
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
-}
-
-#add-review .submit-btn {
-    text-align: center;
-}
-
-#add-review .submit-btn button {
-    padding: 10px 40px;
-    border-radius: 30px;
-    font-size: 18px;
-    font-style: italic;
-}
-
-#add-review .alert {
-    width: 60%;
-    border-radius: 30px;
-    padding: 10px 15px;
+#verify-email span{
+    font-size: 20px;
+    font-weight: 500;
+    color: #0c760c;
 }
 
 #footer .bg-image {
@@ -1051,7 +685,6 @@
     border-right: 1px solid #403f3f;
     padding-right: 30px;
 }
-
 
 #footer .upper-side .left-side {
     width: 23%;
