--- a/Frontend - Organi/assets/css/pages/wishlist/wishlist.css
+++ b/Frontend - Organi/assets/css/pages/wishlist/wishlist.css
@@ -507,12 +507,12 @@
     transition: width 0.3s;
 }
 
-#header .down-side .menu ul li a:hover+.horizontal-line {
-    width: 100%;
+#header .down-side .menu ul a:hover {
+    color: green;
 }
 
-#header .down-side .menu ul a:hover {
-    color: green
+#header .down-side .menu ul a:hover + .horizontal-line {
+    width: 100%;
 }
 
 #header .down-side .drop-down {
@@ -527,8 +527,8 @@
     position: relative;
     z-index: 1;
     height: 0;
-    transition: height 0.5s;
-    background-color: white;
+    transition: height 0.3s ease-in-out;
+    background: white;
     width: 215px;
 }
 
@@ -576,7 +576,7 @@
 }
 
 #header .down-side .drop-down-menu li:hover {
-    background-image: linear-gradient(45deg, #cfcfcf, #ffffff);
+    background-image: linear-gradient(45deg, #d3d3d3, #dbdada);
 }
 
 #header .down-side .info {
@@ -667,8 +667,7 @@
 
 #wishlist-table h1 {
     text-align: center;
-    background-color: #daffee;
-    ;
+    background-color: #daffee;;
     border: 2px solid #72bb8c;
     border-radius: 50px;
     font-style: italic;
@@ -801,11 +800,9 @@
 }
 
 #footer .bg-image {
-    background-image: url(../../../images/backgrounds/background4.png);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 595px;
 }
 
 #footer .upper-side {
@@ -970,7 +967,7 @@
 #footer .down-side {
     display: flex;
     justify-content: space-around;
-    margin-top: 23px;
+    margin-top: 15px;
 }
 
 #footer .down-side .right-side ul {
