finish profile page

--- a/Frontend - Organi/assets/css/pages/reset-password/reset-password.css
+++ b/Frontend - Organi/assets/css/pages/reset-password/reset-password.css
@@ -703,6 +703,7 @@
 #reset-password .reset-password .reset-password-content .input-icon{
     border-radius: 10px;
     margin-top: 50px;
+    position: relative;
 }
 
 #reset-password .reset-password .reset-password-content .input-icon label{
@@ -748,6 +749,29 @@
 
 #reset-password .reset-password .reset-password-content button:hover{
     background-color: #16ad1c;
+}
+
+#reset-password .reset-password .reset-password-content  svg {
+    position: absolute;
+    right: 15px;
+    top: 54px;
+    font-size: 17px;
+    color: #6e6e6e;
+    z-index: 1;
+}
+
+#reset-password .reset-password .reset-password-content  svg:hover {
+    cursor: pointer;
+}
+
+#reset-password .reset-password .reset-password-content  .line {
+    position: absolute;
+    width: 24px;
+    height: 2px;
+    background-color: #727272;
+    right: 13px;
+    top: 61px;
+    transform: rotate(30deg);
 }
 
 #footer .bg-image {
