--- a/Frontend - Organi/assets/css/pages/home/home.css
+++ b/Frontend - Organi/assets/css/pages/home/home.css
@@ -27,154 +27,154 @@
 /* ANIMATIONS-START */
 @keyframes blink {
    50% {
-       color: rgb(0, 194, 0)
+      color: rgb(0, 194, 0)
    }
 }
 
 @keyframes blink-facebook {
    50% {
-       color: rgb(17, 0, 255);
+      color: rgb(17, 0, 255);
    }
 }
 
 @keyframes blink-twitter {
    50% {
-       color: rgb(0, 247, 255);
+      color: rgb(0, 247, 255);
    }
 }
 
 @keyframes blink-instagram {
    50% {
-       color: rgb(200, 14, 224);
+      color: rgb(200, 14, 224);
    }
 }
 
 @keyframes blink-linked-in {
    50% {
-       color: rgb(28, 20, 148);
+      color: rgb(28, 20, 148);
    }
 }
 
 @keyframes blink-pinterest {
    50% {
-       color: rgb(211, 101, 119)
+      color: rgb(211, 101, 119)
    }
 }
 
 @keyframes blink-youtube {
    50% {
-       color: rgb(255, 0, 0)
+      color: rgb(255, 0, 0)
    }
 }
 
 @keyframes blink-google {
    50% {
-       color: rgb(255, 123, 0)
+      color: rgb(255, 123, 0)
    }
 }
 
 @keyframes blink-menu {
    50% {
-       color: white;
+      color: white;
    }
 }
 
 @keyframes text {
 
    from {
-       left: 120px;
+      left: 120px;
    }
 
    to {
-       left: 0;
+      left: 0;
    }
 }
 
 @keyframes info {
 
    from {
-       top: 100px;
+      top: 100px;
    }
 
    to {
-       top: 0;
+      top: 0;
    }
 }
 
 @keyframes animation-text-on-image1 {
 
    from {
-       top: 500px;
+      top: 500px;
    }
 
    to {
-       top: 133px
+      top: 133px
    }
 }
 
 @keyframes animation-text-on-image2 {
 
    from {
-       top: 500px;
+      top: 500px;
    }
 
    to {
-       top: 150px
+      top: 150px
    }
 }
 
 @keyframes glide1 {
    from {
-       top: 100px;
-       left: 0;
+      top: 100px;
+      left: 0;
    }
 
    to {
-       top: 140px;
-       left: 0;
+      top: 140px;
+      left: 0;
    }
 }
 
 @keyframes glide2 {
    from {
-       top: 50px;
-       right: 0;
+      top: 50px;
+      right: 0;
 
    }
 
    to {
-       top: 0;
-       right: 0;
+      top: 0;
+      right: 0;
    }
 }
 
 @keyframes text-effect {
    10% {
-       opacity: 0.5;
+      opacity: 0.5;
    }
 
    20% {
-       opacity: 1;
+      opacity: 1;
    }
 
    80% {
-       opacity: 1;
-       top: 0;
+      opacity: 1;
+      top: 0;
    }
 
    90% {
-       opacity: 0.5;
+      opacity: 0.5;
    }
 
    100% {
-       opacity: 0;
-       top: 100px;
+      opacity: 0;
+      top: 100px;
    }
 }
 
 @keyframes border-animation {
    50% {
-       border-color: rgb(9, 223, 9);
+      border-color: rgb(9, 223, 9);
    }
 }
 
@@ -511,7 +511,7 @@
    color: green;
 }
 
-#header .down-side .menu ul a:hover + .horizontal-line {
+#header .down-side .menu ul a:hover+.horizontal-line {
    width: 100%;
 }
 
@@ -807,7 +807,7 @@
 #slider .slider .carousel .carousel-text1 {
    position: absolute;
    top: 20%;
-   left: 30%;
+   left: 31%;
    color: white;
    font-size: 35px;
    text-align: center;
@@ -854,23 +854,13 @@
    background: green;
 }
 
-
 #slider .slider .carousel .carousel-text2 {
-   position: absolute;
-   top: 17%;
-   left: 7%;
-   color: white;
-   font-size: 35px;
-   text-align: center;
+   left: 12%;
 }
 
 #slider .slider .carousel .carousel-text3 {
-   position: absolute;
-   top: 20%;
-   left: 25%;
-   color: white;
-   font-size: 35px;
-   text-align: center;
+   top: 22%;
+   left: 26%;
 }
 
 #slider .slider .carousel .carousel-text button:hover {
@@ -1027,6 +1017,7 @@
    position: relative;
    padding-bottom: 10px;
    margin-bottom: 45px;
+   margin-top: 20px;
 }
 
 .products .tab-content .product:hover {
@@ -1377,10 +1368,6 @@
    position: relative;
 }
 
-#countdown .countdown:hover {
-   cursor: pointer;
-}
-
 #countdown .countdown .countdown-image {
    height: 775px;
    width: 100%;
@@ -1406,12 +1393,14 @@
 #countdown .countdown .countdown-text h1 {
    margin-bottom: 10%;
    color: green;
+   margin-left: 10px;
+   font-weight: 700;
 }
 
 #countdown .countdown .countdown-text p {
-   font-size: 23px;
-   line-height: 40px;
+   font-size: 50px;
    font-family: cursive;
+   animation: blink 0.4s infinite;
 }
 
 
@@ -1423,8 +1412,8 @@
    gap: 10px;
    font-size: 35px;
    position: absolute;
-   bottom: 27%;
-   left: 9%;
+   bottom: 35%;
+   left: 10%;
 }
 
 #countdown .countdown .countdown-timer .countdown-item {
@@ -1461,8 +1450,8 @@
    cursor: pointer;
    animation: blink 0.4s infinite;
    position: absolute;
-   bottom: 10%;
-   left: 16%;
+   bottom: 15%;
+   left: 17%;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
    border: 2px solid green;
 }
@@ -1473,15 +1462,19 @@
 
 #countdown .countdown .countdown-discount {
    position: absolute;
-   bottom: 5%;
-   width: 12%;
-   left: 35%;
-   height: 190px;
+   bottom: 15%;
+   left: 33%;
+   transform: rotate(25deg);
 }
 
-#countdown .countdown .countdown-discount img {
-   width: 100%;
-   height: 100%;
+#countdown .countdown .countdown-discount span {
+   background: #1ebd1e;
+   font-size: 35px;
+   padding: 3px 25px;
+   color: white;
+   border-radius: 30px;
+   font-family: serif;
+   background-image: linear-gradient(45deg, green, #3f743f);
 }
 
 #brand h1 {
